<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest01Var04</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="edittext_label">Number</string>
    <string name="playButton_text">Play</string>
    <string name="title_activity_practical_test01_var02_playactivity">PracticalTest01Var02PlayActivity</string>
    <string name="title_activity_practical_test01_var02_play">PracticalTest01Var02PlayActivity</string>
    <string name="score_label">Score</string>
    <string name="checkButton_text">Check</string>
    <string name="generateButton_text">Generate</string>
    <string name="backButton_text">Back</string>
    <string name="guest_edittext">Guess</string>

</resources>
